fix overflow css

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -86,19 +86,6 @@
     border: none;
     width: 100vw;
     background-color: black;
-    /** background-image: url('../images/posterBackdrop.jpg');
-    padding: 40px 0px;
-    background-color: navy;
-    background-repeat: repeat-x;
-    background-size: cover;
-    background-position-y: center;
-    background-blend-mode: darken ;
-    
-    */
-    
-    /**--mask: linear-gradient(to bottom, rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 90%, rgba(0,0,0, 0) 96%, rgba(0,0,0, 0) 0);
-    mask: var(--mask);
-    -webkit-mask: var(--mask);*/
   }
 
   .callContainer {
